--- a/src/app/employees-manage-dash/employees-manage-dash.component.html
+++ b/src/app/employees-manage-dash/employees-manage-dash.component.html
@@ -145,7 +145,7 @@
     <div dir="rtl">
         <div class="row" style="margin-right: 10px;width: 95%;margin-bottom: -8px;">
             <div class="col-11">
-                <mat-form-field appearance="standard" style="box-shadow: 0px 0px 5px 0px #000;padding-right: 10px;">
+                <mat-form-field appearance="standard" style="padding-right: 10px;">
                     <mat-label class="filterClass">מסנן</mat-label>
                     <input matInput (keyup)="applyFilter($event)" placeholder="הקלד מסנן" #input>
                 </mat-form-field>
@@ -181,7 +181,8 @@
 
             <ng-container matColumnDef="Gender">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> מגדר </th>
-                <td mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.Gender}}
+                <td mat-cell *matCellDef="let element" style="justify-content: center;"><span
+                        *ngIf="element.Gender == 'Male'">זכר</span><span *ngIf="element.Gender == 'Female'">נקבה</span>
                 </td>
             </ng-container>
 
