--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -182,10 +182,11 @@
     <mat-spinner class="loader" *ngIf="!loaded"></mat-spinner>
     <div class="survey-options">
         <div class="poll-options">
-            <div class="row" style="margin-bottom: 10px;">
+            <div class="row" style="margin-bottom: 10px;display: flex;">
                 <div class="col-4" *ngFor="let item of all_departments_array"
                     style="margin-bottom: 5px;height: 75px;cursor: pointer;">
-                    <mat-card *ngIf="item.Dept_Name && item.OccupancyPerDepart != '0'"
+                    <!-- && item.OccupancyPerDepart != '0' -->
+                    <mat-card *ngIf="item.Dept_Name"
                         (click)="openDialogToFill(item.Dept_Number,item.Dept_Name,'1')" style="height: 100%;"
                         class="card dash-cards m-2 p-2 text-center">
                         <div class="list-style text-center" style="font-size: 23px;color: darkblue;"><span
