--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,16 @@ footer {
 .pd-60{
     padding-bottom: 60px;
 }
-
+.red-snackbar {
+    background: red;
+    color: black;
+    font-weight: bold;
+  }
+.green-snackbar {
+    background: green;
+    color: white;
+    font-weight: bold;
+  }
 .row.boder-me{
     margin-bottom: 10px;
     margin-top: 10px;
