--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -346,7 +346,7 @@
             <li class="nav-item" *ngIf="_EmSurgiries">
                 <a class="nav-link" routerLink="urgentsurgeries">ניתוחים דחופים</a>
             </li>
-            <li class="nav-item" *ngIf="_OrdersToAppointmentsComponent">
+            <li class="nav-item">
                 <a class="nav-link" routerLink="orderstoappointments"> בקשה לזימון תורים</a>
             </li>
             <li class="nav-item" *ngIf="_OnlineAppointments">
