--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -186,9 +186,8 @@
                 <div class="col-4" *ngFor="let item of all_departments_array"
                     style="margin-bottom: 5px;height: 75px;cursor: pointer;">
                     <!--  && item.OccupancyPerDepart != '0' -->
-                    <mat-card *ngIf="item.Dept_Name"
-                        (click)="openDialogToFill(item.Dept_Number,item.Dept_Name,'1')" style="height: 100%;"
-                        class="card dash-cards m-2 p-2 text-center">
+                    <mat-card *ngIf="item.Dept_Name" (click)="openDialogToFill(item.Dept_Number,item.Dept_Name,'1')"
+                        style="height: 100%;" class="card dash-cards m-2 p-2 text-center">
                         <div class="list-style text-center" style="font-size: 23px;color: darkblue;"><span
                                 *ngIf="item.Dept_Name == 'מיון יולדות (חדר לידה)'">מיון יולדות</span><span
                                 *ngIf="item.Dept_Name == 'טפול נמרץ פגים ובילוד בחולה'">טיפול נמרץ פגים</span>
@@ -216,7 +215,7 @@
                                 *ngIf="item.Dept_Name != 'מיון יולדות (חדר לידה)' && item.Dept_Name != 'טפול נמרץ פגים ובילוד בחולה'">{{item.Dept_Name}}</span>
                         </div>
                         <div class="list-style text-center" style="font-size: 18px;" *ngIf="item.Dept_Name">
-                            <span class="coronaNumber" *ngIf="item.CoronaNumber !== '0'" style="color: red;">מטופלי
+                            <span class="coronaNumber" *ngIf="item.CoronaNumber !== '0' && item.CoronaNumber !== null" style="color: red;">מטופלי
                                 קורונה:
                                 {{item.CoronaNumber}}
                             </span>
